# HACC

./: .gitignore  .gitmodules  =1.2.0  AUDIT_TOOLKIT_SUMMARY.md  COLLECTION_COMPLETE_SUMMARY.md  COMMUNICATIONS_INGEST.md  COMPLETE_AUDIT_STATUS.md  DISCOVERY_COMPLETE.md  EVIDENCE_REQUEST_TEMPLATE.md  EXECUTIVE_BRIEF.txt  FINDINGS_PRIORITY_ANALYSIS.md  HOUSING_FOCUS_FINDINGS.md  Memo from Attorney General Bondi Guidance.md  OREGON_DOCUMENTS_COMPLETE.md  PROXY_ORG_PLAN.md  QUANTUM_RESIDENTIAL_DOCUMENT_FINDINGS.md  QUICK_ACCESS_GUIDE.md  QUICK_REFERENCE.txt  QUICK_START.md  QUICK_START.txt  Quantum_residential.html  Quantum_residential2.html  README.md  README.txt  RESEARCH_SUMMARY.md  agent.md  blossom-community-apartments  check_ipfs_vector_backend.py  clackamas_domains.txt  compare_complaint_manager_interfaces.py  enhanced_research.py  gmail_oauth.py  hacc_adversarial_runner.py  hacc_complaint_email_keywords.txt  hacc_complaint_email_plan.md  hacc_complaint_manager.py  hacc_email_keywords_from_complaint.txt  hacc_grounded_pipeline.py  import_gmail_evidence.py  index_evidence_history_with_ipfs_datasets.py  (+19 more)
Breach of Contract/: Makefile  README.md  chat_extract_updated.md  export_joinder_artifacts.py  pyproject.toml  regen_title18_hacc.sh  regen_title18_quantum.sh  render_joinder_graph.py  title18_hacc_context_overrides.json  title18_quantum_context_overrides.json  title18_render_context_overrides.json
Breach of Contract/docs/: COMPLETE_ARTIFACT_INDEX_AND_FILING_PACKAGE.md  COURT_FILING_SEQUENCE_JOINDER_QUANTUM.md  DEPOSITION_DISCOVERY_STRATEGY_QUANTUM_JOINDER.md  (+79 more)
(+4245 files in other folders)
